--- a/CSS/style_2.css
+++ b/CSS/style_2.css
@@ -7,7 +7,7 @@
     width: 1440px;
     height: 1024px;
 
-    background: url(IMG/car-3075497_1280\ 1.jpg)  rgba(185, 28, 190, 0.5);
+    background: url(../IMG/car-1.png) rgba(185, 28, 190, 0.5);
     /* background-color:  rgba(185, 28, 190, 0.5) ; */
     border-radius: 30px;
     display: flex;
@@ -20,10 +20,11 @@ ul{
 
 .menu{
     width: 303px;
-    background-color: rgba(128,128,128,0.5);
+    background-color: #0b0b0d;
+opacity: 0.5;
     color:aliceblue;
     justify-content: space-between;
-    font-style: "Oswald", "Montserrat";
+    font-family: "Oswald", "Montserrat";
     font-size: 14px;
     border-bottom-left-radius: 30px;
     border-top-left-radius: 30px;
@@ -40,14 +41,16 @@ ul{
 
 #home{
     color:#A276FF;
+    border-left: 3px solid #A276FF;
 }
 
 #home:hover{
     color:yellow;
+    border-left: 3px solid yellow;
 }
 
 #copyright{
-    margin-top: 35px;
+    margin-top: 55px;
     text-align: left;
     margin-left: 60px;
     opacity: 0.5;
@@ -55,14 +58,15 @@ ul{
 }
 
 li{
-    padding: 30px;
-}
+    margin-top: 50px;
+    }
+
 li:hover{
-    color: yellow;
+    color: yellow;    
 }
 
 .menu-botton{
-    margin-top: 200px;
+    margin-top: 270px;
 }
 
 .top-panel{
@@ -105,7 +109,7 @@ h1{
     margin: 100px 0 0 100px;
     color: white;
     font-weight: 700;
-    font-style: "Montserrat", "Oswald";
+    font-family: "Montserrat", "Oswald";
     font-size: 50px;
 }
 
@@ -118,27 +122,29 @@ b:hover{
     color: yellow;
 }
 
-.text-container{
-    
+.text-container{    
     width: 800px;
     margin: 10px 0 60px 100px;
     font-size: 25px;
-    font-style: "Oswald", "Montserrat";
+    font-family: "Oswald", "Montserrat";
     color: white;
 }
 
 #button{
     text-decoration: none;
-    border: 3px solid white;
+    border: 3px solid #FFFFFF;
     width: 500px;
     height: 64px;
     margin: 120px 0 20px 100px;
-    padding:20px 60px 20px 60px;
+    padding:20px 100px 20px 100px;
     border-radius: 25px;
-    font-size: 20px;
+    font-family: Oswald;
+    font-size: 16px;
     font-weight: 700;
+    line-height: 79px;
+    align-self: center;
     color:white;
-    /* border-color: white; */
+    
 }
 
 #button:hover{
@@ -151,6 +157,8 @@ b:hover{
     font-size: 42px;
     font-weight: 700;
     color: white; 
+    font-family: Oswald;
+
 }
 
 #photo2:hover{
@@ -158,15 +166,17 @@ background: url(IMG/4.png);
 }
 
 #triangle{
-    padding: 12px;
+    padding: 20px 0 0 10px;
     height: 28px;
 }
 
 .text-container-2{
     margin: 0 0 0 100px;
-    /* border: 2px solid black; */
+    font-family: Roboto;
+    font-weight: 500;
     font-size: 16px;
     color:white;
+    line-height: 21px;
 }
 
 /* 
@@ -175,3 +185,73 @@ background: url(IMG/4.png);
     text-align: right;
     width: 172px;
 } */
+
+.article{
+    width: 900px;
+    height: 1000px;
+    background-color: #FFFFFF;
+    margin: 100px 0 0 100px;
+    border-radius: 41px;
+    display: flex;
+}
+
+.text{
+    width: 465px;
+    padding: 80px 80px 0 80px;
+    font-family: Oswald;
+}
+
+.night_sky{
+width: 400px;
+
+}
+
+#photo_night_sky{
+    padding-top: 80px;
+    width: 300px;
+    height: auto;
+}
+
+h2{
+    font-size: 35px;
+    padding-bottom: 5px;
+}
+
+hr{
+    width: 50px;
+    border: 4px solid rgb(202, 60, 202);
+    }
+
+.topic_text{
+    font-family: Roboto;
+    font-weight: 700;
+    padding-top: 20px;
+    line-height: 1.5;
+}
+
+.text_1{
+    padding-bottom: 10px;
+}
+
+.text_1, .text_2{
+    font-family: Roboto;
+    font-weight: 500;
+    padding-top: 10px;
+    line-height: 1.5;
+}
+
+h5{
+    font-family: Oswald;
+    font-weight: 700;
+    padding-top: 10px;
+    line-height: 1.5;
+    font-size: 16px;
+}
+
+.photo_text{
+    font-family: Montserrat;
+    font-size: 11px;
+    padding-left: 40px;
+}
+
+
