--- a/CSS/style_2.css
+++ b/CSS/style_2.css
@@ -3,12 +3,15 @@
     padding: 0;
 }
 
+body{
+    background: url(../IMG/car-1.png) rgb(5, 7, 41);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .wrapper{
     width: 1440px;
     height: 1024px;
-
-    background: url(../IMG/car-1.png) rgba(185, 28, 190, 0.5);
-    /* background-color:  rgba(185, 28, 190, 0.5) ; */
     border-radius: 30px;
     display: flex;
 }
@@ -21,7 +24,8 @@ ul{
 .menu{
     width: 303px;
     background-color: #0b0b0d;
-opacity: 0.5;
+    box-sizing: border-box;
+    opacity: 0.5;
     color:aliceblue;
     justify-content: space-between;
     font-family: "Oswald", "Montserrat";
@@ -57,11 +61,12 @@ opacity: 0.5;
 
 }
 
-li{
+li, a{
     margin-top: 50px;
+    text-decoration: none;
     }
 
-li:hover{
+li:hover, a:hover{
     color: yellow;    
 }
 
