--- a/CSS/style_2.css
+++ b/CSS/style_2.css
@@ -7,6 +7,7 @@ body{
     background: url(../IMG/car-1.png) rgb(5, 7, 41);
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 
 .wrapper{
@@ -14,6 +15,7 @@ body{
     height: 1024px;
     border-radius: 30px;
     display: flex;
+    margin: 0 auto;
 }
 
 ul{
